--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
+    "@fastify/multipart": "^9.0.3",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "http-server": "^14.1.1"
+    "fastify": "^5.4.0",
+    "http-server": "^14.1.1",
+    "multer": "^2.0.2"
   }
 }
